--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,17 +2,15 @@ services:
   mc-server:
     build: .
     image: mc-server:latest
-    container_name: mc-server
     env_file:
       - .env
     environment:
       - EULA=${EULA}
-      - SERVER_JAR=/opt/minecraft/${SERVER_JAR_NAME}
       - MAX_RAM=${MAX_RAM}
       - MIN_RAM=${MIN_RAM}
     ports:
-      - "${HOST_PORT:-8888}:25565/tcp"
-      - "${HOST_PORT:-8888}:25565/udp"
+      - "${HOST_PORT:-25565}:25565"
+
     volumes:
       - ./data:/data   # nur Spielstände
     restart: unless-stopped
